# IP-Address-Logging

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
auditlogger/: __init__.py  logging_config.py  main.py
auditlogger/collector/: network.py  router.py  system.py  timecheck.py
auditlogger/collector/providers/: __init__.py  base.py  client.py  connection.py  detection.py
auditlogger/collector/router/: __init__.py  base.py  client.py  connection.py  detection.py  tplink.py
auditlogger/config/: config.example.yaml  loader.py
auditlogger/notifications/: email.py  telegram.py
auditlogger/scheduler/: __init__.py  tasks.py
auditlogger/storage/: __init__.py  archive.py  hashchain.py  json_logger.py
docs/: architecture.md  refactoring-roadmap.md
tests/: test_capabilities.py  test_event.py  test_loader.py  test_network.py  test_notification_triggers.py  test_router.py
