[project]
name = "auditlogger"
version = "1.0.0"
description = "Windows audit logger for IP, network, and system events."
requires-python = ">=3.11"
dependencies = [
]

[project.scripts]
auditlogger = "auditlogger.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
